# pydantic-config-gen

./: .env.example  README.md  config.toml  main.py  pyproject.toml
examples/: application_config_example.py  conditional_config_example.py  startup_validation.py  usecase_example.py
scripts/: generate_configs.py
src/config/: __init__.py  generated.py  generator.py  parser.py
src/config/templates/: config.py.j2
