[project]
name = "cartesi-config-exploration"
version = "0.1.0"
description = "Python configuration system inspired by Cartesi's TOML-based approach"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "toml>=0.10.2",
]

[project.scripts]
generate-configs = "scripts.generate_configs:main"
